--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.67.0",
   "private": true,
   "engines": {
-    "node": ">=20.15",
+   "node": ">=18.17 <=22"
     "pnpm": ">=9.5"
   },
   "packageManager": "pnpm@9.6.0",
